--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "react-scripts start",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "author": "",
